# JniTest

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/xzq/jnitest/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  Logger.h  StringUtil.cpp  StringUtil.h  com_xzq_jnitest_JniTools.h  jvmti.h  native-lib.cpp
app/src/main/java/com/xzq/jnitest/: CustomException.java  JniTools.java  MainActivity.java  TimeUtil.java
app/src/main/java/com/xzq/util/: CustomException.java  JniApplicantion.java  JvmtiHelper.java  Monitor.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/xzq/jnitest/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
